--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 \chapter{How money is created (and destroyed) in modern economies}
 \section{Monetary base and money}
 
-$$MB=\text{Notes} + \text{Coins}$$ Money is issued by the Central Bank in circulation. So the monetary base is the amount of notes and coins in Circulation plus the the amount notes and coins in Reserves. 
+$$MB=\text{Notes} + \text{Coins}$$ 2323232 Money is issued by the Central Bank in circulation. So the monetary base is the amount of notes and coins in Circulation plus the the amount notes and coins in Reserves. 
 
 Money, is the means of payment, the titles owned by households, businesses and the state, used for:
 \begin{itemize}
