test build steps

--- a/main.tex
+++ b/main.tex
@@ -1335,20 +1335,20 @@ The reason:
 \end{figure}
 
 
-
-\begin{multline*}
-    \uparrow X^d=100\text{\euro} \implies \left\{\begin{array}{r}
-         \uparrowP_X=50\text{\euro}  \\
-         \uparrow W_X=50\text{\euro} 
-    \end{array}\right\} \implies C^d_W=50\text{\euro} \implies \\ \left\{\begin{array}{r}
-         \uparrow P_W=25\text{\euro}  \\
-         \uparrow W_W=25\text{\euro}  \implies \uparrow C^d_W=25\text{\euro} 
-    \end{array} \right\} \implies \\ \implies \left\{\begin{array}{r}
-          \uparrow P_W=12.5\text{\euro} \\
-          \uparrow W_W=12.5\text{\euro}  \implies \uparrow C^d_W=12.5\text{\euro} 
-    \end{array}\right\} \implies ... \\ ... \implies 
-    \sum \uparrow P_W=50\text{\euro}
-\end{multline*}
+COMMENTED SHIT
+% \begin{multline*}
+%     \uparrow X^d=100\text{\euro} \implies \left\{\begin{array}{r}
+%          \uparrowP_X=50\text{\euro}  \\
+%          \uparrow W_X=50\text{\euro} 
+%     \end{array}\right\} \implies C^d_W=50\text{\euro} \implies \\ \left\{\begin{array}{r}
+%          \uparrow P_W=25\text{\euro}  \\
+%          \uparrow W_W=25\text{\euro}  \implies \uparrow C^d_W=25\text{\euro} 
+%     \end{array} \right\} \implies \\ \implies \left\{\begin{array}{r}
+%           \uparrow P_W=12.5\text{\euro} \\
+%           \uparrow W_W=12.5\text{\euro}  \implies \uparrow C^d_W=12.5\text{\euro} 
+%     \end{array}\right\} \implies ... \\ ... \implies 
+%     \sum \uparrow P_W=50\text{\euro}
+% \end{multline*}
 
 
 \subsection{Effect of increased exports}
@@ -2598,8 +2598,8 @@ $$TB = X - M \implies -1 \$ = 0 - 1 \$ $$
 \end{figure}
 
 If for some reason IFI start expecting that the P will depreciate:
-
-$\implies$ they sell a significant part of their P securities. Exchange the Pesos they obtained for \$'s with Argentina's CB \implies $\downarrow \$\text{ Reserves}$, eventually to $\emptyset \implies $ IFI will have Pesos to exchange and no one to exchange them with $\implies$ depreciation.
+COMMENTED
+% $\implies$ they sell a significant part of their P securities. Exchange the Pesos they obtained for \$ with Argentina's CB $\implies $\downarrow \text{ Reserves}$ , eventually to $\emptyset \implies $ IFI will have Pesos to exchange and no one to exchange them with $\implies$ depreciation.
 
 Self-fullfiling Prophecy:Expectation that the Peso will depreciate in the future $\implies$ depreciation of the Peso in the present. 
 
