--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@
 \begin{document}
 
 
-\part{First Test}
+\part{First Test Test}
 \chapter{How money is created (and destroyed) in modern economies}
 \section{Monetary base and money}
 
