--- a/main.tex
+++ b/main.tex
@@ -876,7 +876,7 @@ This led to AD being kept at 100 \yen, which is max production capacity which en
         
         \end{tikzpicture}
     
-    \caption{Income shares}
+    \caption{Income shares in the economy}
 \end{figure}
 
 \paragraph{Keynesian idea:} AD may determine a level of output below full employment. 
